@@ -88,6 +88,7 @@ Improvements
 * GITHUB#14239: Hunspell's option to tolerate affix rule count mismatches was
   improved to tolerate more instances of this problem.  (Robert Muir)
 
+* GITHUB#14238: Improve test coverage of Dynamic Range Faceting. (John Houser)
 
 Optimizations
 ---------------------
